<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#E0E0E0"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/image_foto"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/imagen_foto"/>

    <LinearLayout
        android:id="@+id/datos"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical" >

       	 <TextView
         	android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre"
            android:textSize="22sp"
            android:textStyle="bold" />
       	 
       	 <RelativeLayout 
       	     android:id="@+id/localizacion"
       	     android:layout_width="wrap_content"
       	     android:paddingLeft="-5dp"
       	     android:paddingTop="5dp"
       	     android:paddingBottom="5dp"
       	     android:layout_height="wrap_content">
       	     
       	     <ImageView 
       	         android:id="@+id/compass"
       	         android:layout_width="40dp"
       	         android:layout_height="40dp"
       	         android:src="@drawable/compass"
       	         android:contentDescription="@string/compass"/>
       	     
       	     <TextView 
       	         android:id="@+id/coordenadas"
       	         android:layout_width="wrap_content"
       	         android:layout_height="wrap_content"
       	         android:layout_toRightOf="@+id/compass"
       	         android:layout_centerInParent="true"/>
       	 </RelativeLayout>

         <TextView
            android:id="@+id/label_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/label_descripcion" />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:background="#E0E0E0"
        android:layout_weight="0.20">
	<Button
        android:id="@+id/boton_editar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   	    android:gravity="center|bottom"
   	    android:text="@string/boton_editar" />
	</LinearLayout>
</LinearLayout>
